# fargv

./: pyproject.toml  setup.py
fargv/: fargv_argparser.py
